@@ -1,4 +1,9 @@
-2018-05-11 [0.0.3]
+2018-09-09 [0.0.4]
+ * new streamer.sh script
+ * properly respect quality setting
+ * various other bugfixes
+2018-06-01 [0.0.3]
+ * Change type of addon from video addon to service
  * Added three sets of parameters - Startup Parameters, Playlist Parameters, Startup state
 2018-05-10 [0.0.2]
  * Fixed error at channel without program [ChannelIsNotBroadcastingError]
